1.13_the_project_step7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-step7
spec:
  type: ClusterIP
  selector:
    name: project-step7
  ports:
    - name: http
      port: 1234
      targetPort: 80
